# conductor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  main.py  pyproject.toml  uninstall.ps1  uninstall.sh
.github/workflows/: release.yml
cli/: main.py
conductor/api/: routes.py
conductor/notifications/: manager.py  webhook.py
conductor/proxy/: pty_wrapper.py
conductor/server/: app.py
conductor/sessions/: registry.py  session.py
conductor/utils/: config.py
conductor/worktrees/: __init__.py  manager.py  state.py
docs/: MACOS.md  WINDOWS.md  autostart.md  intro.md  notification_slack.md  notification_telegram.md
src/: handler.py  utils.py
static/: index.html  sw.js
