[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor"
version = "0.1.0"
description = "Local orchestration layer for interactive terminal processes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
conductor = "cli.main:cli"
